# main.go
@@ -10,16 +10,19 @@
 // @BasePath /api/v1
 // @schemes http
 
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 package main
 
 import (
 	"log"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/arsmn/fiber-swagger/v2" // benar
+	"github.com/arsmn/fiber-swagger/v2"
+	"github.com/gofiber/fiber/v2/middleware/cors"
 
-
-	_ "uas/docs" // generated swagger docs
+	_ "uas/docs"
 	"uas/config"
 	"uas/databases"
 	"uas/routes"
@@ -32,9 +35,13 @@ func main() {
 	databases.ConnectMongoDB()
 
 	app := fiber.New()
-
-	// Swagger route
+	
 	app.Get("/swagger/*", swagger.HandlerDefault) // default: http://localhost:3000/swagger/index.html
+
+	app.Use(cors.New(cors.Config{
+        AllowOrigins: "*",
+        AllowMethods: "GET,POST,PUT,DELETE,OPTIONS",
+    }))
 
 	routes.RegisterRoutes(app)
 
